--- a/main.lfm
+++ b/main.lfm
@@ -7,55 +7,16 @@ object FrmMain: TFrmMain
   ClientHeight = 949
   ClientWidth = 1491
   LCLVersion = '2.0.10.0'
-  object TxtUrlBar: TEdit
-    AnchorSideLeft.Control = CmbMethod
-    AnchorSideLeft.Side = asrBottom
-    AnchorSideTop.Control = Owner
-    Left = 172
-    Height = 35
-    Top = 6
-    Width = 624
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 6
-    OnExit = TxtUrlBarExit
-    TabOrder = 1
-    Text = 'https://'
-  end
-  object CmbMethod: TComboBox
-    AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = Owner
-    Left = 6
-    Height = 35
-    Top = 6
-    Width = 160
-    AutoComplete = True
-    AutoCompleteText = [cbactEnabled, cbactEndOfLineComplete, cbactSearchAscending]
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 6
-    ItemHeight = 0
-    ItemIndex = 0
-    Items.Strings = (
-      'GET'
-      'POST'
-      'PUT'
-      'PATCH'
-      'DELETE'
-    )
-    OnExit = CmbMethodExit
-    TabOrder = 0
-    Text = 'GET'
-  end
   object PgMain: TPageControl
     AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = TxtUrlBar
-    AnchorSideTop.Side = asrBottom
+    AnchorSideTop.Control = Owner
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
     AnchorSideBottom.Control = Owner
     AnchorSideBottom.Side = asrBottom
     Left = 6
-    Height = 896
-    Top = 47
+    Height = 937
+    Top = 6
     Width = 1479
     TabStop = False
     ActivePage = TabNew
@@ -65,15 +26,16 @@ object FrmMain: TFrmMain
     BorderSpacing.Right = 6
     BorderSpacing.Bottom = 6
     TabIndex = 0
-    TabOrder = 3
+    TabOrder = 0
     Options = [nboShowCloseButtons, nboShowAddTabButton]
     object TabNew: TTabSheet
       Caption = 'GET https://'
-      ClientHeight = 854
+      ClientHeight = 895
       ClientWidth = 1469
       object SplReqResp: TPairSplitter
         AnchorSideLeft.Control = TabNew
-        AnchorSideTop.Control = TabNew
+        AnchorSideTop.Control = CmbMethod
+        AnchorSideTop.Side = asrBottom
         AnchorSideRight.Control = TabNew
         AnchorSideRight.Side = asrBottom
         AnchorSideBottom.Control = TabNew
@@ -81,7 +43,7 @@ object FrmMain: TFrmMain
         Cursor = crVSplit
         Left = 6
         Height = 842
-        Top = 6
+        Top = 47
         Width = 1457
         Anchors = [akTop, akLeft, akRight, akBottom]
         BorderSpacing.Left = 6
@@ -148,11 +110,12 @@ object FrmMain: TFrmMain
                   AnchorSideTop.Control = TabHeaders
                   AnchorSideRight.Control = TabHeaders
                   AnchorSideRight.Side = asrBottom
-                  AnchorSideBottom.Control = btnAddHeader
+                  AnchorSideBottom.Control = BtnAddHeader
                   Left = 0
                   Height = 196
                   Top = 6
                   Width = 1433
+                  AlternateColor = clBackground
                   Anchors = [akTop, akLeft, akRight, akBottom]
                   AutoFillColumns = True
                   BorderSpacing.Top = 6
@@ -189,13 +152,19 @@ object FrmMain: TFrmMain
                     465
                   )
                   Cells = (
+                    3
+                    0
                     1
+                    '✅'
                     1
                     1
                     'User-Agent'
+                    2
+                    1
+                    'Mozilla/5.0 (compatible; fpweb; webagent)'
                   )
                 end
-                object btnAddHeader: TButton
+                object BtnAddHeader: TButton
                   AnchorSideLeft.Control = TabHeaders
                   AnchorSideBottom.Control = TabHeaders
                   AnchorSideBottom.Side = asrBottom
@@ -208,9 +177,71 @@ object FrmMain: TFrmMain
                   Caption = '➕'
                   Font.Height = -24
                   Font.Name = 'Sans'
-                  OnClick = btnAddHeaderClick
+                  OnClick = BtnAddHeaderClick
                   ParentFont = False
+                  ParentShowHint = False
+                  ShowHint = True
                   TabOrder = 1
+                end
+                object BtnDelHeader: TButton
+                  AnchorSideLeft.Control = BtnAddHeader
+                  AnchorSideLeft.Side = asrBottom
+                  AnchorSideBottom.Control = TabHeaders
+                  AnchorSideBottom.Side = asrBottom
+                  Left = 33
+                  Height = 33
+                  Hint = 'Remove header'
+                  Top = 202
+                  Width = 33
+                  Anchors = [akLeft, akBottom]
+                  Caption = '➖'
+                  Font.Height = -24
+                  Font.Name = 'Sans'
+                  OnClick = BtnDelHeaderClick
+                  ParentFont = False
+                  ParentShowHint = False
+                  ShowHint = True
+                  TabOrder = 2
+                end
+                object BtnEnableHeader: TButton
+                  AnchorSideLeft.Control = BtnDelHeader
+                  AnchorSideLeft.Side = asrBottom
+                  AnchorSideBottom.Control = TabHeaders
+                  AnchorSideBottom.Side = asrBottom
+                  Left = 66
+                  Height = 33
+                  Hint = 'Enable header'
+                  Top = 202
+                  Width = 33
+                  Anchors = [akLeft, akBottom]
+                  Caption = '✅'
+                  Font.Height = -24
+                  Font.Name = 'Sans'
+                  OnClick = BtnEnableHeaderClick
+                  ParentFont = False
+                  ParentShowHint = False
+                  ShowHint = True
+                  TabOrder = 3
+                end
+                object BtnDisableHeader: TButton
+                  AnchorSideLeft.Control = BtnEnableHeader
+                  AnchorSideLeft.Side = asrBottom
+                  AnchorSideBottom.Control = TabHeaders
+                  AnchorSideBottom.Side = asrBottom
+                  Left = 99
+                  Height = 33
+                  Hint = 'Disable header'
+                  Top = 202
+                  Width = 33
+                  Anchors = [akLeft, akBottom]
+                  Caption = '⬜'
+                  Font.Height = -24
+                  Font.Name = 'Sans'
+                  OnClick = BtnDisableHeaderClick
+                  ParentFont = False
+                  ParentShowHint = False
+                  ShowHint = True
+                  TabOrder = 4
                 end
               end
               object TabBody: TTabSheet
@@ -267,74 +298,66 @@ object FrmMain: TFrmMain
           end
         end
       end
+      object CmbMethod: TComboBox
+        AnchorSideLeft.Control = TabNew
+        AnchorSideTop.Control = TabNew
+        Left = 6
+        Height = 35
+        Top = 6
+        Width = 160
+        AutoComplete = True
+        AutoCompleteText = [cbactEnabled, cbactEndOfLineComplete, cbactSearchAscending]
+        BorderSpacing.Left = 6
+        BorderSpacing.Top = 6
+        ItemHeight = 0
+        ItemIndex = 0
+        Items.Strings = (
+          'GET'
+          'POST'
+          'PUT'
+          'PATCH'
+          'DELETE'
+        )
+        OnExit = CmbMethodExit
+        TabOrder = 1
+        Text = 'GET'
+      end
+      object TxtUrlBar: TEdit
+        AnchorSideLeft.Control = CmbMethod
+        AnchorSideLeft.Side = asrBottom
+        AnchorSideTop.Control = TabNew
+        Left = 172
+        Height = 35
+        Top = 6
+        Width = 624
+        BorderSpacing.Left = 6
+        BorderSpacing.Top = 6
+        OnExit = TxtUrlBarExit
+        OnKeyPress = TxtUrlBarKeyPress
+        TabOrder = 3
+        Text = 'https://'
+      end
+      object BtnSend: TButton
+        AnchorSideLeft.Control = TxtUrlBar
+        AnchorSideLeft.Side = asrBottom
+        AnchorSideTop.Control = TabNew
+        AnchorSideBottom.Control = TxtUrlBar
+        AnchorSideBottom.Side = asrBottom
+        Left = 802
+        Height = 35
+        Top = 6
+        Width = 75
+        Anchors = [akTop, akLeft, akBottom]
+        BorderSpacing.Left = 6
+        BorderSpacing.Top = 6
+        Caption = 'Send'
+        Color = clHighlight
+        Font.Color = clBlack
+        Font.Style = [fsBold]
+        OnClick = BtnSendClick
+        ParentFont = False
+        TabOrder = 2
+      end
     end
-  end
-  object BtnSend: TButton
-    AnchorSideLeft.Control = TxtUrlBar
-    AnchorSideLeft.Side = asrBottom
-    AnchorSideTop.Control = Owner
-    AnchorSideBottom.Control = TxtUrlBar
-    AnchorSideBottom.Side = asrBottom
-    Left = 802
-    Height = 35
-    Top = 6
-    Width = 75
-    Anchors = [akTop, akLeft, akBottom]
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 6
-    Caption = 'Send'
-    OnClick = BtnSendClick
-    TabOrder = 2
-  end
-  object btnDelHeader: TButton
-    AnchorSideLeft.Control = TabHeaders
-    AnchorSideBottom.Control = TabHeaders
-    AnchorSideBottom.Side = asrBottom
-    Left = 64
-    Height = 33
-    Hint = 'Remove header'
-    Top = 352
-    Width = 33
-    Anchors = [akLeft, akBottom]
-    Caption = '➖'
-    Font.Height = -24
-    Font.Name = 'Sans'
-    OnClick = btnDelHeaderClick
-    ParentFont = False
-    TabOrder = 4
-  end
-  object btnEnableHeader: TButton
-    AnchorSideLeft.Control = TabHeaders
-    AnchorSideBottom.Control = TabHeaders
-    AnchorSideBottom.Side = asrBottom
-    Left = 104
-    Height = 33
-    Hint = 'Enable header'
-    Top = 352
-    Width = 33
-    Anchors = [akLeft, akBottom]
-    Caption = '✅'
-    Font.Height = -24
-    Font.Name = 'Sans'
-    OnClick = btnAddHeaderClick
-    ParentFont = False
-    TabOrder = 5
-  end
-  object btnDisableHeader: TButton
-    AnchorSideLeft.Control = TabHeaders
-    AnchorSideBottom.Control = TabHeaders
-    AnchorSideBottom.Side = asrBottom
-    Left = 136
-    Height = 33
-    Hint = 'Disable header'
-    Top = 352
-    Width = 33
-    Anchors = [akLeft, akBottom]
-    Caption = '❌'
-    Font.Height = -24
-    Font.Name = 'Sans'
-    OnClick = btnAddHeaderClick
-    ParentFont = False
-    TabOrder = 6
   end
 end
