--- a/main.lfm
+++ b/main.lfm
@@ -392,13 +392,13 @@ object FrmMain: TFrmMain
               Height = 546
               Top = 6
               Width = 1443
-              ActivePage = TabResponseBody
+              ActivePage = TabResponseHeaders
               Anchors = [akTop, akLeft, akRight, akBottom]
               BorderSpacing.Left = 6
               BorderSpacing.Top = 6
               BorderSpacing.Right = 6
               BorderSpacing.Bottom = 6
-              TabIndex = 0
+              TabIndex = 1
               TabOrder = 0
               object TabResponseBody: TTabSheet
                 Caption = 'Body'
